--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,10 +1,19 @@
 // Color variables
-$grey:       #9e9e9e;
-$dark-grey:  #282828;
-$white:      #fff;
-$dark-white: #f5f5f5;
-$green:      #339a65;
-$green-transparent: #008036;
-$blue:       #4272b8;
-$blue-transparent: #07449F;
-$purple:     #745DA5;
+$white:                  #ffffff;
+$dark-white:             #f5f5f5;
+
+$grey:                   #9e9e9e;
+$dark-grey:              #282828;
+
+$green:                  #339a65;
+$dark-green:             #25714a;
+$green-transparent:      #008036;
+
+$blue:                   #4272b8;
+$blue-transparent:       #07449F;
+
+$purple:                 #745DA5;
+$dark-purple:            #47356c;
+
+$light-red:              #ff6052; 
+$dark-red:               #d75145;
